# UARH

./: .gitignore  PRD.md  README.md  pyproject.toml  scratch.py
docs/: ARCHITECTURE.md  COMPONENTS.md  SANDBOXING.md  USAGE.md
my_new_experiment/: config.yaml  program.md
uarh/: __init__.py  main.py  tui_app.py
uarh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uarh/agents/: __init__.py  architect.py  base.py  debug.py  pi.py  scientist.py  theorist.py  writer.py
uarh/core/: __init__.py  config.py  graph.py  state.py
uarh/execution/: __init__.py  level0_static.py  level1_shape.py  level2_train.py  sandbox.py
uarh/memory/: __init__.py  distillation.py  episodic.py  lineage.py  semantic.py
