[project]
name = "uarh"
version = "0.1.0"
description = "Universal Autonomous Research Harness — A DCG multi-agent state machine for autonomous ML research."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "litellm>=1.50.0",
    "pydantic>=2.7.0",
    "chromadb>=0.5.0",
    "sqlalchemy>=2.0.0",
    "networkx>=3.3",
    "torch>=2.2.0",
    "ruff>=0.7.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
uarh = "uarh.main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["uarh*"]

[tool.ruff]
target-version = "py311"
line-length = 120
